--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - "8.12.0"
 script:
-  - yarn run lint
+  - yarn run lint --no-fix --max-warnings 0
   - yarn run build
 deploy:
   provider: pages
