--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
     "eagle.js": "^0.4.1",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
