Create code snippets for Kotlin and C++ (#12)

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "eagle.js": "^0.4.1",
+    "highlight.js": "^9.12.0",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "vue": "^2.5.17",
